Site URL changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Brent Hackman
 email: brenthack35@gmail.com
-url: /portfolio/
+url: https://brenthack35.github.io/portfolio
 description: "A Web Developer with over 17 years of overall experience in design and development of web-based applications, e-commerce solutions, websites and responsive/mobile."
 keywords: "Web Developer, Development, Front End, Javascript, CSS, SaSS, Code, PHP, Shopify, Wordpress, ecommerce, platforms, mac, apple, mobile, responsive"
 skills: "Front End Web Developer"
