Update to description and location

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Brent Hackman
 email: brenthack35@gmail.com
 url: https://brenthack35.github.io/portfolio
-description: "A Web Developer with over 17 years of overall experience in design and development of web-based applications, e-commerce solutions, websites and responsive/mobile."
+description: "A Web Developer with 20 years of overall experience in design and development of web-based applications, e-commerce solutions, websites and responsive/mobile."
 keywords: "Web Developer, Development, Front End, Javascript, CSS, SaSS, Code, PHP, Shopify, Wordpress, ecommerce, platforms, mac, apple, mobile, responsive"
 skills: "Front End Web Developer"
 meta_author: Hackman, Brent
@@ -48,7 +48,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: Lititz, PA
+  - line: Jonestown, PA
   - line: USA
 
 # Credits content
